# Vendor-Audit

./: .gitignore  README.md  audit_checks.py  audit_render.py  audit_txt_report.py  gitignore  os_eol.json  pyproject.toml  requirements.txt  scoring_rubric.json  ssllabs_scan.py  vendor_audit.py
example_reports_and_screenshots/: addy.io_2026-04-29T08-51-59.txt  addy.io_2026-04-30T13-08-55.txt  csv_report.csv  fbi.gov_2026-04-29T09-07-52.txt  fbi.gov_2026-04-30T13-12-19.txt  usa.gov_2026-04-29T09-07-24.txt  usa.gov_2026-04-30T13-14-38.txt  vendor_audit_example.webm
src/vendor_audit/: __init__.py  __main__.py  audit_render.py  audit_txt_report.py  cli.py  library_eol.json
